# simple-web-server-python

./: .gitignore  README.md  pyproject.toml
simple-web-server/: __init__.py  __main__.py
simple_web_server/: __init__.py  __main__.py
simple_web_server/resource_handlers/: directory_handler.py  file_handler.py  non_existent_resource_handler.py  resource_handler.py
tests/: conftest.py  test_main.py
tests/resource_handlers/: test_directory_handler.py  test_file_handler.py  test_non_existent_handler.py
